# Openclaw-Discord

./: .env.example  .gitignore  README.md  check.ps1  discord.patch.json5  pyproject.toml  requirements.txt  run.ps1
docs/: commands.md  design.md  discord-setup.md  env.md  voice-receive.md
docs/superpowers/plans/: 2026-05-06-openclaw-core-mvp.md
openclaw_discord/: __init__.py  __main__.py  commands.py  config.py  config_validation.py  controller_factory.py  controllers.py  core.py  discord_gateway.py  filesystem_controller.py  input_blocking.py  logging.py  phone_mic_gateway.py  speech_bridge.py  speech_pipeline.py  speech_recognizer.py  speech_sink_factory.py  voice_receive.py  voice_recv_patch.py  windows_controller.py
tests/: test_cli.py  test_commands.py  test_config.py  test_config_validation.py  test_controller_factory.py  test_core.py  test_discord_gateway.py  test_filesystem_controller.py  test_input_blocking.py  test_logging.py  test_phone_mic_gateway.py  test_speech_bridge.py  test_speech_pipeline.py  test_speech_recognizer.py  test_speech_sink_factory.py  test_voice_receive.py  test_voice_recv_patch.py  test_windows_controller.py
