[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-discord"
version = "0.1.0"
description = "Discord voice control core for OpenClaw."
requires-python = ">=3.11"
dependencies = [
  "discord.py>=2.4.0",
  "PyNaCl>=1.5.0",
  "python-dotenv>=1.0.1",
  "pyautogui>=0.9.54",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]
voice = [
  "discord-ext-voice-recv==0.5.2a179",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["openclaw_discord*"]
