[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-discord"
version = "0.1.0"
description = "Discord voice control core for OpenClaw."
requires-python = ">=3.11"
dependencies = [
  "discord.py==2.7.1",
  "PyNaCl>=1.5.0",
  "python-dotenv>=1.0.1",
  "pyautogui>=0.9.54",
  "pyperclip>=1.9.0",
  "pywin32>=306; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]
voice = [
  "discord-ext-voice-recv @ git+https://github.com/imayhaveborkedit/discord-ext-voice-recv@ac04ea7b0941112e83767cf1c1469b408fa06748",
  "SpeechRecognition>=3.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["openclaw_discord*"]
